更新翻页、关联方式
