# qiansi-server/docs/swagger.json
@@ -91,9 +91,21 @@
                     "application/json"
                 ],
                 "summary": "获取部署应用列表",
+                "parameters": [
+                    {
+                        "description": "入参集合",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/req.DeployListParam"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\": 1,\"msg\": \"读取成功\",\"data\": [{\"AfterCommand\": \"324545\",\"BeforeCommand\": \"1232132132\",\"Branch\": \"123213\",\"CreateTime\": \"2019-02-28T10:24:41+08:00\",\"DeployType\": 1,\"Id\": 491,\"LocalPath\": \"123213\",\"NowVersion\": 0,\"RemoteUrl\": \"123213\",\"Title\": \"491-一号机器的修改241\",\"Uid\": 2,\"UpdateTime\": \"2019-02-28T10:25:17+08:00\"}]}",
+                        "description": "OK",
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/resp.ApiResult"
@@ -745,6 +757,23 @@
                 "deployId": {
                     "description": "部署应用ID",
                     "type": "integer"
+                }
+            }
+        },
+        "req.DeployListParam": {
+            "type": "object",
+            "properties": {
+                "lastId": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         },
